[tool.poetry]
name = "lola"
version = "0.1.0"
description = ""
authors = ["Ale Sanchez <alesanchezmedina@gmail.com>"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "^3.9"
librosa = "^0.8.1"
youtube_dl = "^2021.6.6"
sox = "^1.4.1"
pandas = "^1.3.3"
tensorflow = "^2.6.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
isort = "^5.9.3"
bandit = "^1.7.0"
black = "21.7b0"
pylint = "2.10.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
