[tool.poetry]
name = "lola-dashboard"
version = "0.1.0"
description = "Mid-project for the Data Science bootcamp from Core Code School"
authors = ["Ale Sanchez <alesanchezmedina@gmail.com>"]
license = "The Unlicense"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.3.0"
watchdog = "^2.1.3"
python-dotenv = "^0.19.0"
streamlit = "^1.0.0"
matplotlib = "^3.4.3"
altair = "^4.1.0"

[tool.poetry.dev-dependencies]
black = "^21.7b0"
isort = "^5.9.3"
pylint = "^2.9.6"
flake8 = "^3.9.2"
bandit = "^1.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
